--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       <h3>Live-Chat-Code-Collaboration Platform</h3>
       <p>A real-time chat and code collaboration platform designed specifically for programmers. It supports public forums and private rooms, allowing users to chat, share code snippets, and collaborate on coding tasks live in a web-based editor with syntax highlighting.</p>
       <p><strong>Tech:</strong> HTML, CSS, JavaScript, Node.js, Express.js, Socket.io, CodeMirror, MongoDB, JWT</p>
-      <p><a href="https://github.com/Rajdeepry/Rajgit.git" target="_blank">GitHub Repo</a></p>
+      <p><a href="https://github.com/Rajdeepry/Live-Code-Chat-Collaboration.git" target"_blank">GitHub Repo</a></p>
     </div>
     <div class="card">
       <h3>Car-Deal-Hub</h3>
